@@ -1144,6 +1144,20 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     NULL
   },
+  { /* Canon PIXMA MP630 */
+    "PIXMA MP630", 3,          /*model, model_id*/
+    842, 17*72,       /* max paper width and height */
+    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
+    8,
+    &canon_PIXMA_MG5200_slotlist,
+    CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_I|CANON_CAP_r,0x64,control_cmd_PIXMA_iP4200,  /*features */
+    &canon_MULTIPASS_MP640_modelist,
+    &canon_MULTIPASS_MP630_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    NULL
+  },
   { /* Canon PIXMA MP640 */
     "PIXMA MP640", 3,          /*model, model_id*/
     842, 17*72,       /* max paper width and height */
